--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer primevue,tailwind-base,tailwind-utilities,custom-base;
+/* TODO: figure out how to do layer inside import */
+@import './theme/theme.css' layer(primevue);
+@import './theme/main.css' layer(custom-base);
 
-.content-borders div {
-  border: 1px solid #000;
+@layer tailwind-base {
+  @tailwind base;
 }
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
+
+/* @layer custom-base {
+  @import url('./theme/components/input.css');
+} */
