--- a/src/theme/components/input.css
+++ b/src/theme/components/input.css
@@ -1,7 +1,11 @@
 .p-inputtext,
 form .p-button {
-  --input-padding: 1rem;
-  padding: var(--input-padding) 20px;
+  padding: var(--input-padding-y) var(--input-padding-x);
+
+}
+.p-inputotp-input.p-inputtext {
+  --input-padding-x: 0;
+  width: calc(var(--input-height) + var(--input-padding-y) * 2);
 }
 .p-password-input {
   width: 100%;
