--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -1,3 +1,4 @@
 @import url('./components/input.css');
 @import url('./components/nav.css');
 @import url('./components/icon.css');
+@import url('./components/select.css');
