--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -4,6 +4,13 @@
   --secondary-color: #36b05f;
   --primary-color: #5c36ad;
   --nav-logo-width: 40px;
+  --input-padding-y: 1rem !important; 
+  --input-padding-x: 20px !important;
+  --input-height: 19px !important;
+  /* select */
+
+  /* Default Value */
+  --icon-ms: 20px;
   /*  */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
