--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -2,3 +2,41 @@
 @import url('./components/nav.css');
 @import url('./components/icon.css');
 @import url('./components/select.css');
+
+@font-face {
+  font-family: 'Merriweather';
+  src:
+    url('@/theme/fonts/Merriweather-Regular.ttf') format('embedded-opentype'),
+    /* Modern Browsers */ url('@/theme/fonts/Merriweather-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: bold;
+  src:
+    url('@/theme/fonts/Merriweather-Bold.ttf') format('embedded-opentype'),
+    /* Modern Browsers */ url('@/theme/fonts/Merriweather-Bold.ttf') format('truetype');
+}
+
+/* now italics */
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: italic;
+  src:
+    url('@/theme/fonts/Merriweather-Italic.ttf') format('embedded-opentype'),
+    /* Modern Browsers */ url('@/theme/fonts/Merriweather-Italic.ttf') format('truetype');
+}
+
+/* bold italic */
+
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: bold;
+  font-style: italic;
+  src:
+    url('@/theme/fonts/Merriweather-BoldItalic.ttf') format('embedded-opentype'),
+    /* Modern Browsers */ url('@/theme/fonts/Merriweather-BoldItalic.ttf') format('truetype');
+}
+
+
