--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -6,10 +6,11 @@
   --uncertain-color: #368bb0;
   --error-color: #b03d36;
   --gray-line-color: #e1e1e1;
-  --nav-logo-width: 40px;
+  --nav-logo-width: 70px;
   --input-padding-y: 1rem !important;
   --input-padding-x: 20px !important;
   --input-height: 19px !important;
+  --yellow:#ABAD36;
   /* select */
 
   /* Default Value */
