--- a/src/theme/components/nav.css
+++ b/src/theme/components/nav.css
@@ -57,7 +57,9 @@
 }
 .simple-search:focus {
   box-shadow: none;
+  border: none;
   border-bottom: 2px solid var(--secondary-color);
+  outline: none;
 }
 .simple-search::placeholder {
   @apply text-slate-500 text-[1.25rem];
