feat: add-GPA-chart

--- a/src/theme/components/select.css
+++ b/src/theme/components/select.css
@@ -5,7 +5,7 @@
     @apply gap-6;
 }
 .interest-select-button {
-    @apply !rounded-md border-r-slate-300;
+    @apply !rounded-md border-r-0;
     border-right-width: 1px;
     border-right-style: solid;
     box-shadow: none;
@@ -15,7 +15,6 @@
 }
 
 .interest-select-button[aria-checked="true"] {
-    @apply text-white;
     /* box-shadow: none; */
     box-shadow: var(--primary-color) 0px 0px 0px 2px;
     border:none;
@@ -24,6 +23,5 @@
 }
 
 .interest-select-button[aria-checked="false"] {
-    box-shadow: transparent 0px 0px 0px 2px;
-    @apply bg-transparent text-gray-900 text-slate-400;
+    @apply bg-transparent text-gray-900 text-slate-400 border-[1px] border-slate-400 shadow-none;
 }
